--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,4 @@ yacs
 trimesh[easy]
 albumentations
 scikit-learn
+onnxruntime-gpu @ https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/onnxruntime-gpu/
